@@ -1,3 +1,7 @@
+2008-11-01  Kouhei Sutou  <kou@cozmixng.org>
+
+	* extconf.rb, src/rb_cairo_surface.c: check ruby/io.h availability.
+
 2008-09-26  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo.c: 1.7.1 -> 1.8.0.
